k8s/apps/learning-whoami/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: learning-whoami
  labels:
    app.kubernetes.io/name: learning-whoami
spec:
  selector:
    app.kubernetes.io/name: learning-whoami
  ports:
    - name: http
      port: 80
      targetPort: http
