k8s/apps/learning-whoami/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: learning-whoami
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - whoami.lab.localhost
  rules:
    - backendRefs:
        - name: learning-whoami
          port: 80
